--- a/src/semantics/Semantic.css
+++ b/src/semantics/Semantic.css
@@ -1,12 +1,12 @@
 /* Header */
 .Header {
   height: 50px;
+  margin: 25px;
   padding: 0 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: #0a152f;
 
   .blog-icon {
     width: 150px;
