--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: rgb(25, 25, 25);
+  /* background-color: rgb(25, 25, 25); */
 }
 
 #root {
