--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html, body {
+/* Basic Css */
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -10,4 +12,32 @@ html, body {
 #root {
   width: 100%;
   height: 100%;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+}
+
+/* [ Semantics ] */
+/* < Header > */
+.Header {
+  height: 50px;
+  margin: 25px;
+  padding: 0 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+
+  .blog-icon {
+    width: 150px;
+  }
+}
+
+.Menu {
+  width: 150px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
