--- a/src/components/Welcome/animations/AnimationB.css
+++ b/src/components/Welcome/animations/AnimationB.css
@@ -1,4 +1,4 @@
-.AnimationB {
+.Animation {
   position: relative;
   width: 160px;
   height: 160px;
@@ -8,7 +8,7 @@
   box-shadow: -5px -5px 5px rgba(255, 255, 255, 0.1), 10px 10px 10px rgba(0, 0, 0, 0.4), inset -5px -5px 5px rgba(255, 255, 255, 0.2), inset 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
-.AnimationB:before {
+.Animation:before {
   content: "";
   position: absolute;
   top: 25px;
@@ -22,7 +22,7 @@
   box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.2), inset 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-.AnimationB span {
+.Animation span {
   position: absolute;
   width: 100%;
   height: 100%;
