--- a/src/components/Welcome/animations/AnimationB.css
+++ b/src/components/Welcome/animations/AnimationB.css
@@ -5,7 +5,10 @@
   border: 4px solid #282828;
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: -5px -5px 5px rgba(255, 255, 255, 0.1), 10px 10px 10px rgba(0, 0, 0, 0.4), inset -5px -5px 5px rgba(255, 255, 255, 0.2), inset 10px 10px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: -5px -5px 5px rgba(255, 255, 255, 0.1),
+    10px 10px 10px rgba(0, 0, 0, 0.4),
+    inset -5px -5px 5px rgba(255, 255, 255, 0.2),
+    inset 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
 .Animation:before {
@@ -19,7 +22,8 @@
   background: #212121;
   border-radius: 50%;
   border: 2px solid #292929;
-  box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.2), inset 3px 3px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.2),
+    inset 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .Animation span {
@@ -27,7 +31,12 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-image: linear-gradient(-225deg, #ff7402 0%, #ffe700 50%, #fff55e 100%);
+  background-image: linear-gradient(
+    -225deg,
+    #ff7402 0%,
+    #ffe700 50%,
+    #fff55e 100%
+  );
   filter: blur(20px);
   z-index: -1;
   animation: animate 0.5s linear infinite, hue 3s linear infinite;
@@ -52,3 +61,5 @@
     filter: hue-rotate(360deg);
   }
 }
+
+  
