--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -46,7 +46,7 @@
           box-shadow: inset 20px 20px 60px #c5c5c5, inset -20px -20px 60px #ffffff;
         }
 
-        .account-input:invalid {
+        .account-input.error {
           box-shadow: 1px 1px 10px red;
         }
       }
