feat: login page

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ body {
 
         .account-button {
           width: 25%;
+          min-width: fit-content;
           margin: 1rem;
           padding: 1rem;
           border: none;
