--- a/src/resources/styles/Basic.css
+++ b/src/resources/styles/Basic.css
@@ -1,11 +1,12 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  display: block;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
-  /* background-color: rgb(25, 25, 25); */
+  background: #e0e0e0;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 #root {
