--- a/src/resources/styles/Header.css
+++ b/src/resources/styles/Header.css
@@ -1,21 +1,25 @@
-/* < Header > */
 .Header {
-  height: 50px;
-  margin: 25px;
+  width: 95%;
+  height: 100px;
   padding: 0 25px;
+  margin: 25px;
+  box-sizing: border-box;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
 
-  .blog-icon {
-    width: 150px;
-  }
+  position: sticky;
+  top: 25px;
+
+  border-radius: 25px;
+  background-color: rgb(255 255 255 / 5%);
+  box-shadow: 0 0 5px rgb(0 0 0 / 15%);
+  backdrop-filter: blur(10px);
 }
 
-.Menu {
-  width: 150px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.Header.expand {
+}
+
+.Header.collapse {
 }
